tests/errors/sem_test_12.py
# sem_test12.py 
test = 5
test -= "hey"
print(test)